tests/NormalTests/paczka2/big_fuzzy/80426823.err
Error in line 5: ZQ5vzsCuF S685 31,2
Error in line 17: ZQ5vzsCuF S808 56,7
Error in line 22: esI2hnwf S685 93,3
Error in line 35: Tee6kE S808 57,6
Error in line 36: Tee6kE S685 17,4
Error in line 39: T5mjXsP09 S808 26,7
Error in line 42: CEiZoz A470 78,8
Error in line 46: CEiZoz S685 248,5
Error in line 40: T5mjXsP09 A966 74,9
Error in line 53: esI2hnwf S808 95,8
Error in line 52: T5mjXsP09 A470 22,0
Error in line 57: esI2hnwf S685 77,3
Error in line 63: T5mjXsP09 S685 69,7
Error in line 64: esI2hnwf A966 35,0
Error in line 76: ZQ5vzsCuF A470 2,1
Error in line 77: esI2hnwf A966 51,7
Error in line 75: 3dOS S808 78,6
Error in line 78: CEiZoz A966 21,1
Error in line 90: 3dOS A966 l9,8
Error in line 97: Tee6kE S808 17,1
Error in line 100: A470 S808 99,2
Error in line 80: esI2hnwf S685 56,8
Error in line 107: ZQ5vzsCuF S685 55,5
Error in line 120: 3dOS A966 20,3
Error in line 115: A470 A470 446,8
Error in line 122: 3dOS A470 23,8
Error in line 132: A470 A470 15,44
Error in line 129: 3dOS S685 65,9
Error in line 147: esI2hnwf S685 44,1
Error in line 148: 3dOS A470 98,6
Error in line 156: Tee6kE A470 9,8
Error in line 168: A470 A470 164,0
Error in line 178: 3dOS S685 83,6
Error in line 177: ZQ5vzsCuF S808 76,7
Error in line 199: Tee6kE S685 11,1
Error in line 200: Tee6kE A470 48,1
Error in line 226: TmjXsP09 S68 17,
Error in line 228: A470 A966 56,44
Error in line 232: T5mjXsP09 S685 61,4
